--- a/copyconf-JOELwindows7.conf
+++ b/copyconf-JOELwindows7.conf
@@ -2,8 +2,9 @@
 
 [global]
     name: WrongPC
+    z
     lo: ~/copyparty/logs/cpp-%Y-%m%d.xz  # log to c:\users\you\logs\
-    e2dsa, e2ts, z, qr    # sets 3 flags; see explanation
+    e2dsa, e2ts, e2vu, z, qr
     dedup
     #reflink
     p: 80, 443  # listen on ports 80 and 443, not 3923
@@ -11,27 +12,38 @@
     lang: eng   # default language: viking
     #% conf_pieces/accs_internalOnly.conf
     ah-alg: argon2
+    ups-when
+    ups-who: 2
     hist: /c/Serve/copyparty/.cache
 
 [/]               # create a volume available at /
     C:\Serve\copyparty\landing          # sharing this filesystem location
     % conf_pieces/accs_readOnly.conf
 
+[/guestbook]
+    C:\Serve\copyparty\landing\guestbook
+    % conf_pieces/accs_readOnly.conf
+    % conf_pieces/flags_guestbook.conf
+
 [/After_Church]
     W:\starring codes\After Church
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/kolomorotzzet_(kolmorotshitt)_Main]
     W:\kolomorotzzet_(kolmorotshitt)
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/kolomorotzzet_(kolmorotshitt)_Full3]
     P:\kolomorotzzet_(kolmorotshitt)
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/kolomorotzzet_(kolmorotshitt)_Full2]
     C:\Users\Joel Robert Justiawa\Documents\Kolmorotzzet (kolmorotshitt)
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/dump_Phone_Full3]
     P:\kolomorotzzet_(kolmorotshitt)\Artistic_Setups\WRAPPER IN A BIG CONTAINER\From Previous PCs
@@ -65,18 +77,22 @@
 [/MIDI]
     W:\PRIVATE FOLDER\FILE JOEL ROBERT\MIDI
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/MP3]
     W:\kolomorotzzet_(kolmorotshitt)\Artistic_Setups\WRAPPER IN A BIG CONTAINER\From Previous PCs\MP3
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/MP4]
     W:\kolomorotzzet_(kolmorotshitt)\Artistic_Setups\WRAPPER IN A BIG CONTAINER\From Previous PCs\MP4
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/WAV]
     W:\kolomorotzzet_(kolmorotshitt)\Artistic_Setups\WRAPPER IN A BIG CONTAINER\From Previous PCs\WAV
     % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_media.conf
 
 [/IDK_HOW_TO_SHARE]
     C:\Users\Joel Robert Justiawa\Documents\idk how to share
@@ -85,5 +101,10 @@
 [/Camera_Dump_Full3]
     P:\starring codes\Camera Dump
     % conf_pieces/accs_default_noAccident.conf
+
+[/Torrenteh_Full3]
+    P:\kolomorotzzet_(kolmorotshitt)\Artistic_Setups\WRAPPER IN A BIG CONTAINER\Torrenteh
+    % conf_pieces/accs_default_noAccident.conf
+    % conf_pieces/flags_torrenteh.conf
 
 % conf.d
