--- a/copyconf-JOELwindows7.conf
+++ b/copyconf-JOELwindows7.conf
@@ -2,10 +2,10 @@
 
 [global]
     name: WrongPC
-    z
     lo: ~/copyparty/logs/cpp-%Y-%m%d.xz  # log to c:\users\you\logs\
     e2dsa, e2ts, e2vu, z, qr
     dedup
+    html-head: <script src="/plugins/js/tl.js"></script>
     #reflink
     p: 80, 443  # listen on ports 80 and 443, not 3923
     #theme: 2    # default theme: protonmail-monokai
@@ -24,6 +24,10 @@
     C:\Serve\copyparty\landing\guestbook
     % conf_pieces/accs_readOnly.conf
     % conf_pieces/flags_guestbook.conf
+
+[/plugins]
+    C:\Serve\copyparty\plugins
+    % conf_pieces/accs_readOnly.conf
 
 [/After_Church]
     W:\starring codes\After Church
