--- a/conf_pieces/flags_media.conf
+++ b/conf_pieces/flags_media.conf
@@ -1,5 +1,7 @@
 flags:
-    mtp: .bpm=plugins/mtag/audio-bpm.py  # assign ".bpm" (numeric) with script
-    mtp: key=f,t5,plugins/mtag/audio-key.py  # force/overwrite, 5sec timeout
-    mtp: ext=an,plugins/mtag/file-ext.py  # will only run on non-audio files
-    mtp: arch,built,ver,orig=an,eexe,edll,plugins/mtag/exe.py  # only exe/dll
+    #mtp: .bpm=plugins/mtag/audio-bpm.py  # assign ".bpm" (numeric) with script
+    #mtp: key=f,t5,plugins/mtag/audio-key.py  # force/overwrite, 5sec timeout
+    #mte: +x1
+    #mtp: ext=an,plugins/mtag/file-ext.py  # will only run on non-audio files
+    #mtp: arch,built,ver,orig=an,eexe,edll,plugins/mtag/exe.py  # only exe/dll
+    xm: aw,f,j,t3600,plugins/hooks/wget.py
