--- a/copyconf-JOELwindows7.conf
+++ b/copyconf-JOELwindows7.conf
@@ -3,6 +3,7 @@
 [global]
     name: WrongPC
     lo: ~/copyparty/logs/cpp-%Y-%m%d.xz  # log to c:\users\you\logs\
+    forget-ip: 43200  #forgor the ip after this second because doxxing uncontextually is not welcome on most realms & here.
     e2dsa, e2ts, e2vu, z, qr
     dedup
     html-head: <script src="/plugins/js/tl.js"></script>
