--- a/conf/conf-WrongPC-Win.conf
+++ b/conf/conf-WrongPC-Win.conf
@@ -14,7 +14,12 @@
 [/kolomorotzzet_(kolmorotshitt)_Full3]
     P:\kolomorotzzet_(kolmorotshitt)
     % ../conf_pieces/accs_default_noAccident.conf
-    % ../conf_pieces/flags_media.conf
+    #% ../conf_pieces/flags_media.conf
+
+# [/kolomorotzzet_(kolmorotshitt)_Full3/Artistic_Setups/${u}]
+#     P:\kolomorotzzet_(kolmorotshitt)\Artistic_Setups
+#     % ../conf_pieces/accs_kolmorotzzet_contrib.conf
+#     % ../conf_pieces/flags_media.conf
 
 [/kolomorotzzet_(kolmorotshitt)_Full2]
     C:\Users\Joel Robert Justiawa\Documents\Kolmorotzzet (kolmorotshitt)
@@ -28,6 +33,7 @@
 [/doom_WAD]
     C:\Users\Joel Robert Justiawa\Documents\Kolmorotzzet (kolmorotshitt)\Artistic Setups\Doom WADs
     % ../conf_pieces/accs_default_noAccident.conf
+    % ../conf_pieces/flags_media.conf
 
 [/doom_WAD/Mods/JOELwindows7/Lah-Mboh]
     W:\starring codes\Doom Projects\Lah-Mboh
