--- a/conf_pieces/flags_media.conf
+++ b/conf_pieces/flags_media.conf
@@ -5,3 +5,4 @@ flags:
     #mtp: ext=an,plugins/mtag/file-ext.py  # will only run on non-audio files
     #mtp: arch,built,ver,orig=an,eexe,edll,plugins/mtag/exe.py  # only exe/dll
     xm: aw,f,j,t3600,plugins/hooks/wget.py
+    df: 4g     # free disk space cannot go lower than this
