--- a/conf_pieces/flags_upload.conf
+++ b/conf_pieces/flags_upload.conf
@@ -1,7 +1,7 @@
 flags:
     #e2ds       # filesystem indexing is required for many of these:
     #sz: 1k-3m  # accept upload only if filesize in this range
-    #df: 4g     # free disk space cannot go lower than this
+    df: 4g     # free disk space cannot go lower than this
     #vmaxb: 1g  # volume can never exceed 1 GiB
     #vmaxn: 4k  # ...or 4000 files, whichever comes first
     #nosub      # must upload to toplevel folder
