--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -33,3 +33,4 @@
     #### So.. python somehow has no access for change password db in this same folder if put on C:/ drive? I don't get it. try on your Linux?
     #### probably work if you put this repo in `~`.. Windows tho?? I have no idea how permission works for this one.
     #stats  # OpenMetrics Stats pls!!! Just in case anyone wants it idk. But maybe just keep it off if not used since that's lag little bit.
+    ansi  # colors in log message?!??!??!??!?!??!?
