kept breaking develpong

--- a/conf_pieces/flags_media.conf
+++ b/conf_pieces/flags_media.conf
@@ -1,8 +1,14 @@
 flags:
-    #mtp: .bpm=plugins/mtag/audio-bpm.py  # assign ".bpm" (numeric) with script
+    #mtp: .bpm=f,plugins/mtag/audio-bpm.py  # assign ".bpm" (numeric) with script
     #mtp: key=f,t5,plugins/mtag/audio-key.py  # force/overwrite, 5sec timeout
     #mte: +x1
     #mtp: ext=an,plugins/mtag/file-ext.py  # will only run on non-audio files
     #mtp: arch,built,ver,orig=an,eexe,edll,plugins/mtag/exe.py  # only exe/dll
-    xm: aw,f,j,t3600,plugins/hooks/wget.py
+    xm: aw,f,j,t3600,plugins/hooks/wget.py  # allow wgetting if someone 📟 a URL who knows is a downloadable as file.
     df: 4g     # free disk space cannot go lower than this
+    #### Extension Thumbs
+    #ext-th: exe=plugins/icons/executable-exe.png
+    #ext-th: elf=plugins/icons/executable-elf.png
+    #ext-th: mid=plugins/icons/midi.png
+    fk  # generate file keys!!!
+    dks  # and the directory keys complete with access subfolder idk..
