--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -3,6 +3,7 @@
     lo: .logs/cpp-%Y-%m%d.xz  # log to .logs here
     forget-ip: 43200  #forgor the ip after this second because doxxing uncontextually is not welcome on most realms & here.
     e2dsa, e2ts, e2vu, z, qr  # indexing, metadata, db patchings, zeroconf, & QR code pls!!!!!!
+    zsv  # (SSDP) bro, why no Windows Explorer had any idea about our PC here?!??!
     ftp: 21  # enable FTP now! `: 3921`? nah.. standard port instead!
     ftps: 989  # also FTP TLS as well.
     tftp: 69  # oh, trivial ftp too! `: 3969`? nah.. standard port instead!
@@ -34,3 +35,5 @@
     #### probably work if you put this repo in `~`.. Windows tho?? I have no idea how permission works for this one.
     #stats  # OpenMetrics Stats pls!!! Just in case anyone wants it idk. But maybe just keep it off if not used since that's lag little bit.
     ansi  # colors in log message?!??!??!??!?!??!?
+    #themes: 11  # how many ranges of themes from 0 to n number we now have in total?
+    #css-browser: plugins/css/bsod.css  # and here one of the custom theme we got.
