--- a/templates/account.conf.template
+++ b/templates/account.conf.template
@@ -3,7 +3,7 @@
 # such as `yourusername:whatever`.
 # your username, colon, and the password
 
-# DO NOT SHARE THIS FILE
+# DO NOT SHARE THE EDITED FILE OF YOURS
 # Obviously contains your passwords of your entire server copyparty instance.
 # it is recommended that you never use the same password somewhere at anywhere,
 # & always use password manager with its pwd generator like Bitwarden.
