--- a/conf.d/dirs.conf
+++ b/conf.d/dirs.conf
@@ -1,3 +1,8 @@
+# Directories! Volume & where path to go in disk
+# (JOELwindows7)
+# If you'd like to add your own, pls use your config instead of here.
+# This piece is meant for cross platform hence can only be at our internal repository
+
 [/]               
     landing
     % ../conf_pieces/accs_readOnly.conf
@@ -18,3 +23,12 @@
 [/Samples/VolShadowMerge]
     Samples/VolShadowMerge
     % ../conf_pieces/accs_readOnly.conf
+
+[/Sandbox]
+    Sandbox
+    % ../conf_pieces/accs_readOnly.conf
+
+[/Sandbox/StartSandbox]
+    Sandbox/StartSandbox
+    % ../conf_pieces/accs_anarchy.conf
+    % ../conf_pieces/flags_media_strict.conf
