--- a/conf/conf-WrongPC-Win.conf
+++ b/conf/conf-WrongPC-Win.conf
@@ -11,6 +11,13 @@
     % ../conf_pieces/accs_default_noAccident.conf
     % ../conf_pieces/flags_media.conf
 
+# try to censor PAID folder on each of these guys?
+# [/kolomorotzzet_(kolmorotshitt)_Main/Artistic_Setups/*/PAID]
+#     C:\Serve\copyparty\Samples\Redir
+#     % ../conf_pieces/accs_readOnly.conf
+# dang it how do I do this?!
+# fucking hell! no ** recursive?! let's just hide it by prepending dot.
+
 [/kolomorotzzet_(kolmorotshitt)_Full3]
     P:\kolomorotzzet_(kolmorotshitt)
     % ../conf_pieces/accs_default_noAccident.conf
