--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -1,39 +1,56 @@
 [global]
+    #### Server Identity
     name: WrongPC
-    lo: .logs/cpp-%Y-%m%d.xz  # log to .logs here
-    forget-ip: 43200  #forgor the ip after this second because doxxing uncontextually is not welcome on most realms & here.
-    e2dsa, e2ts, e2vu, z, qr  # indexing, metadata, db patchings, zeroconf, & QR code pls!!!!!!
-    zsv  # (SSDP) bro, why no Windows Explorer had any idea about our PC here?!??!
+
+    #### Indexing
+    e2dsa, e2ts, e2vu # All indexes! indexing, metadata, db patchings,
+
+    #### User Interface
+    html-head: '<script src="/plugins/js/tl.js"></script><link rel="stylesheet" href="/plugins/css/style.css"/>'  # add these to the web UI html head
+    lang: ind   # default language: viking
+    #themes: 11  # how many ranges of themes from 0 to n number we now have in total?
+    #theme: 2    # Select start theme! default theme: protonmail-monokai
+    #css-browser: plugins/css/bsod.css  # and here one of the custom theme we got.
+
+    #### Connections
+    z, qr  # zeroconf, & QR code pls!!!!!!
+    p: 80, 443  # listen on ports 80 and 443, not 3923
     ftp: 21  # enable FTP now! `: 3921`? nah.. standard port instead!
     ftps: 989  # also FTP TLS as well.
     tftp: 69  # oh, trivial ftp too! `: 3969`? nah.. standard port instead!
+    forget-ip: 43200  #forgor the ip after this second because doxxing uncontextually is not welcome on most realms & here.
     #smb  # Windows Samba?? this is bad idea..
     #smbw  # NO!! DO NOT LET WRITE!!!
     #### Oh shit! Samba can only be done if pass hash is none!!!! 
     #### `13:59:01.309 auth                  --smb can only be used when --ah-alg is none`
-    dedup
-    html-head: '<script src="/plugins/js/tl.js"></script><link rel="stylesheet" href="/plugins/css/style.css"/>'  # add these to the web UI html head
-    #reflink
-    p: 80, 443  # listen on ports 80 and 443, not 3923
-    #theme: 2    # default theme: protonmail-monokai
-    lang: ind   # default language: viking
+    zsv  # (SSDP) bro, why no Windows Explorer had any idea about our PC here?!??!
+
+    #### Security
     ah-alg: argon2  # use argon2 password hashing
-    ups-when  # see when upload
-    ups-who: 2  # everyone can see upload
-    hist: .cache  # put the db right here on .cache pls
-    deps  # see status of dependencies of copyparty right now
-    og  # horray opengraph!
-    og-ua: "(Discord|Twitter|Slack|Bluesky|Whatever)bot"  # only for these guys
-    rss  # RSS Feed, ON!
-    exp  # Markdown expression?!??!??!
-    #shr: /submit  # Share now place!
     chpw  # let the change password commence
     chpw-no: @kaorfa  # sike! but not for me!
     #chpw-db: .chpw  # put custom passwords in this folder pls.
     chpw-db: ~/copyparty/.secrets  # WTF?! `PermissionError: [Errno 13] Permission denied: '.chpw'`??!??!?!??!
     #### So.. python somehow has no access for change password db in this same folder if put on C:/ drive? I don't get it. try on your Linux?
     #### probably work if you put this repo in `~`.. Windows tho?? I have no idea how permission works for this one.
-    #stats  # OpenMetrics Stats pls!!! Just in case anyone wants it idk. But maybe just keep it off if not used since that's lag little bit.
+
+    #### Experiences
+    exp  # Markdown expression?!??!??!
+    og  # horray opengraph!
+    og-ua: "(Discord|Twitter|Slack|Bluesky|Whatever)bot"  # only for these guys
+    #shr: /submit  # Share now place!
+    dedup  # File deduplication iyey!
+    #reflink
+    magic  # detect for nameless upload filetype detection
+    ups-when  # see when upload
+    ups-who: 2  # everyone can see upload
+
+    #### Logging, Boookeeping, Alerts, & Caches
+    lo: .logs/cpp-%Y-%m%d.xz  # log to .logs here
+    hist: .cache  # put the db right here on .cache pls
+    rss  # RSS Feed, ON!
     ansi  # colors in log message?!??!??!??!?!??!?
-    #themes: 11  # how many ranges of themes from 0 to n number we now have in total?
-    #css-browser: plugins/css/bsod.css  # and here one of the custom theme we got.
+    deps  # see status of dependencies of copyparty right now
+    #stats  # OpenMetrics Stats pls!!! Just in case anyone wants it idk. But maybe just keep it off if not used since that's lag little bit.
+
+    #### Other Settings
