--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -3,7 +3,7 @@
     name: WrongPC
 
     #### Indexing
-    e2dsa, e2ts, e2vu # All indexes! indexing, metadata, db patchings,
+    e2dsa, e2ts, e2vu  # All indexes! indexing, metadata, db patchings,
 
     #### User Interface
     html-head: '<script src="/plugins/js/tl.js"></script><link rel="stylesheet" href="/plugins/css/style.css"/>'  # add these to the web UI html head
@@ -40,7 +40,7 @@
     og-ua: "(Discord|Twitter|Slack|Bluesky|Whatever)bot"  # only for these guys
     #shr: /submit  # Share now place!
     dedup  # File deduplication iyey!
-    #reflink
+    #reflink  # make it Copy On Write but unfortunately this is OS dependent!
     magic  # detect for nameless upload filetype detection
     ups-when  # see when upload
     ups-who: 2  # everyone can see upload
