--- a/conf/conf-WrongPC-Win.conf
+++ b/conf/conf-WrongPC-Win.conf
@@ -97,3 +97,7 @@
     % ../conf_pieces/accs_default_noAccident.conf
     % ../conf_pieces/flags_torrenteh.conf
 
+[/Floccus_idk_bookmarks]
+    P:\starring codes\SaveBackup\Floccus\idk_bookmarks
+    % ../conf_pieces/accs_default.conf
+    % ../conf_pieces/flags_media.conf
