--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -33,6 +33,7 @@
     chpw-db: ~/copyparty/.secrets  # WTF?! `PermissionError: [Errno 13] Permission denied: '.chpw'`??!??!?!??!
     #### So.. python somehow has no access for change password db in this same folder if put on C:/ drive? I don't get it. try on your Linux?
     #### probably work if you put this repo in `~`.. Windows tho?? I have no idea how permission works for this one.
+    usernames  # make sure auth is structured user:pass
 
     #### Experiences
     exp  # Markdown expression?!??!??!
