--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -24,6 +24,7 @@
     #### Oh shit! Samba can only be done if pass hash is none!!!! 
     #### `13:59:01.309 auth                  --smb can only be used when --ah-alg is none`
     zsv  # (SSDP) bro, why no Windows Explorer had any idea about our PC here?!??!
+    opds  # E-reader supports!!!!!!!!!!!!!
 
     #### Security
     ah-alg: argon2  # use argon2 password hashing
