--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -18,6 +18,7 @@
     ftp: 21  # enable FTP now! `: 3921`? nah.. standard port instead!
     ftps: 989  # also FTP TLS as well.
     tftp: 69  # oh, trivial ftp too! `: 3969`? nah.. standard port instead!
+    # Just add dhcp now you can PXE Boot!
     forget-ip: 43200  #forgor the ip after this second because doxxing uncontextually is not welcome on most realms & here.
     #smb  # Windows Samba?? this is bad idea..
     #smbw  # NO!! DO NOT LET WRITE!!!
