--- a/conf_pieces/global_default.conf
+++ b/conf_pieces/global_default.conf
@@ -16,20 +16,20 @@
     z, qr  # zeroconf, & QR code pls!!!!!!
     p: 80, 443  # listen on ports 80 and 443, not 3923
     ftp: 21  # enable FTP now! `: 3921`? nah.. standard port instead!
-    ftps: 989  # also FTP TLS as well.
+    ftps: 989  # also FTP TLS as well. requires `pyopenssl`
     tftp: 69  # oh, trivial ftp too! `: 3969`? nah.. standard port instead!
     # Just add dhcp now you can PXE Boot!
     forget-ip: 43200  #forgor the ip after this second because doxxing uncontextually is not welcome on most realms & here.
     #smb  # Windows Samba?? this is bad idea..
     #smbw  # NO!! DO NOT LET WRITE!!!
-    #### Oh shit! Samba can only be done if pass hash is none!!!! 
+    #### Oh shit! Samba can only be done if pass hash is none!!!!
     #### `13:59:01.309 auth                  --smb can only be used when --ah-alg is none`
     zsv  # (SSDP) bro, why no Windows Explorer had any idea about our PC here?!??!
     opds  # E-reader supports!!!!!!!!!!!!!
 
     #### Security
     ah-alg: argon2  # use argon2 password hashing
-    chpw  # let the change password commence
+    chpw  # let the change password commence-able
     chpw-no: @kaorfa  # sike! but not for me!
     #chpw-db: .chpw  # put custom passwords in this folder pls.
     chpw-db: ~/copyparty/.secrets  # WTF?! `PermissionError: [Errno 13] Permission denied: '.chpw'`??!??!?!??!
@@ -40,13 +40,14 @@
     #### Experiences
     exp  # Markdown expression?!??!??!
     og  # horray opengraph!
-    og-ua: "(Discord|Twitter|Slack|Bluesky|Whatever)bot"  # only for these guys
+    og-ua: "(Discord|Twitter|Slack|Bluesky|Whatever|Copyparty)bot"  # only for these guys
     #shr: /submit  # Share now place!
     dedup  # File deduplication iyey!
     #reflink  # make it Copy On Write but unfortunately this is OS dependent!
     magic  # detect for nameless upload filetype detection
     ups-when  # see when upload
     ups-who: 2  # everyone can see upload
+    #j8  # Multithread!!!
 
     #### Logging, Boookeeping, Alerts, & Caches
     lo: .logs/cpp-%Y-%m%d.xz  # log to .logs here
